correction du style

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -2635,6 +2635,7 @@ body {
     width: 35px;
     display: block;
     border-radius: 50px;
+    margin: 2px;
     &:hover {
       background: #3385FF;
     }
