--- a/static/css/custom.scss
+++ b/static/css/custom.scss
@@ -1,11 +1,11 @@
 ---
 
 ---
-@import "search";
-@import "pygments";
-@import "open_sans";
-@import "roboto";
-@import "style";
+@use "search";
+@use "pygments";
+@use "open_sans";
+@use "roboto";
+@use "style";
 
 .landing-page .navbar-default .nav li a {
   color: black;
@@ -21,7 +21,7 @@
 }
 
 .godot-icon {
-  background: url('/elliot.vanegue/static/assets/img/landing/icons8-godot-32.png');
+  background: url('../assets/img/landing/icons8-godot-32.png');
   height: 32px;
   width: 32px;
   opacity: 0.5;
@@ -29,14 +29,21 @@
 }
 
 .itch-icon {
-  background: url('/elliot.vanegue/static/assets/img/landing/itch-io.png');
+  background: url('../assets/img/landing/itch-io.png');
+  height: 16px;
+  width: 16px;
+  vertical-align: middle;
+}
+
+.bluesky {
+  background: url('../assets/img/landing/bluesky-brands.png');
   height: 16px;
   width: 16px;
   vertical-align: middle;
 }
 
 .icon-chess {
-  background: url('/elliot.vanegue/static/assets/img/landing/chess-solid.svg');
+  background: url('../assets/img/landing/chess-solid.svg');
   height: 32px;
   width: 32px;
   opacity: 0.1;
